Add meta-analysis functionalities and update documentation
* **app_prompt_r.md**:
  - Add guidelines for using `meta` and `metafor` packages for meta-analysis.
  - Add instructions for creating forest plots and funnel plots.
  - Add instructions for handling missing values and data preprocessing.

* **app.py**:
  - Add UI components for inputting effect sizes, variances, and study labels.
  - Add output components for displaying meta-analysis results.
  - Update the greeting for the purpose of the repository.

* **requirements.txt**:
  - Add `meta`, `metafor`, `ggplot2`, `plotly`, `rmarkdown`, `naniar`, `mice`, `dplyr`, `knitr`, `kableExtra`, `robvis` packages.

* **README.md**:
  - Update to provide information on meta-analysis functionalities, setup, and usage.

* **app_utils.py**:
  - Add utility functions for data validation, transformation, and other preprocessing steps.

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,16 @@ google-api-python-client
 markdown
 pandas
 requests
+
+# For meta-analysis in R
+meta
+metafor
+ggplot2
+plotly
+rmarkdown
+naniar
+mice
+dplyr
+knitr
+kableExtra
+robvis
